--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -16,6 +16,12 @@
     display: flex;
     flex-direction: column;
     overflow: scroll;
+
+    .error-message {
+      text-align: center;
+      font-weight: bold;
+      margin-top: 50px;
+    }
   }
 
   button {
