--- a/src/pages/checkoutPage/checkout.styles.scss
+++ b/src/pages/checkoutPage/checkout.styles.scss
@@ -23,6 +23,17 @@
     }
   }
 
+  button{
+    margin-top:20px ;
+  }
+
+  .test-warning{
+    color: red;
+    text-align: center;
+    margin-top: 20px;
+    font-weight: bold;
+  }
+
   .total {
     margin-top: 30px;
     margin-left: auto;
