--- a/src/components/PreviewCollection/collection-preview.styles.scss
+++ b/src/components/PreviewCollection/collection-preview.styles.scss
@@ -13,3 +13,14 @@
     justify-content: space-between;
   }
 }
+
+@media only screen and (max-width: 800px) {
+  .collection-preview{
+
+    .preview {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
+    }
+  }
+}
