--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -1,6 +1,7 @@
 .checkout-item {
   width: 100%;
   display: flex;
+  justify-content: space-between;
   min-height: 100px;
   border-bottom: 1px solid darkgrey;
   padding: 15px 0;
@@ -39,4 +40,27 @@
     padding-left: 12px;
     cursor: pointer;
   }
+}
+
+@media only screen and (max-width: 800px) {
+  .checkout-item{
+  .image-container {
+    width: 20%;
+    padding-right: 15px;
+  }
+  .name,
+  .quantity,
+  .price {
+    width: 20%;
+  }
+  .remove-button {
+    width: 20%;
+  }
+
+  .quantity{
+    .value{
+      margin: 0px 5px;
+    }
+  }
+}
 }
