--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -26,3 +26,22 @@
     }
   }
 }
+
+
+@media only screen and (max-width: 800px) {
+  .header {
+  
+  .logo-container{
+    padding-top: 10px;
+    width: 20%;
+  }
+  .options{
+    width: 80%;
+
+    .option {
+      padding: 10;
+    }
+  }
+}
+}
+
