--- a/src/pages/collectionPage/collection.styles.scss
+++ b/src/pages/collectionPage/collection.styles.scss
@@ -17,3 +17,14 @@
     }
   }
 }
+
+@media only screen and (max-width: 800px) {
+  .collection-page{
+    .items{
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-gap: 10px;
+    }
+  }
+}
+
